// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jEbkNI hmZRKC"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jEbkNI hmZRKC"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jEbkNI hmZRKC"
>
  <span
    className="sc-iBPSDD dlfqYm"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jEbkNI hmZRKC"
>
  <div
    className="sc-gHGAhJ kTxupm"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jEbkNI dfFVDZ"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jEbkNI hNFjIJ"
  size="small"
/>
`;
